[tool.poetry]
name = "rozhlasdownloader"
version = "0.1.0"
description = ""
authors = ["Martin Kodada <martinkodada@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
typer = "^0.4.2"
BeautifulSoup = "^3.2.2"
eyed3 = "^0.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
